Correct alignment of the close button

--- a/app/assets/stylesheets/album.scss
+++ b/app/assets/stylesheets/album.scss
@@ -31,7 +31,7 @@ $image-size: 65vh;
 
     .album-close-btn {
       cursor: pointer;
-      margin-right: $header-height / 2;
+      margin-right: ($header-height - 24px) / 2;
       transition: transform 0.2s ease-in-out;
 
       &:hover {
